--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -27,6 +27,11 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non numquam veniam nihil voluptatem iure suscipit aut, sunt, qui earum tenetur distinctio illum! Iure, autem. Necessitatibus fugit unde id sequi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, illo. Amet sit quos eius nostrum et. Vero fugiat tempore nobis quod similique id distinctio voluptatum soluta aliquam, itaque assumenda vitae!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non numquam veniam nihil voluptatem iure suscipit aut, sunt, qui earum tenetur distinctio illum! Iure, autem. Necessitatibus fugit unde id sequi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, illo. Amet sit quos eius nostrum et. Vero fugiat tempore nobis quod similique id distinctio voluptatum soluta aliquam, itaque assumenda vitae!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non numquam veniam nihil voluptatem iure suscipit aut, sunt, qui earum tenetur distinctio illum! Iure, autem. Necessitatibus fugit unde id sequi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, illo. Amet sit quos eius nostrum et. Vero fugiat tempore nobis quod similique id distinctio voluptatum soluta aliquam, itaque assumenda vitae!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non numquam veniam nihil voluptatem iure suscipit aut, sunt, qui earum tenetur distinctio illum! Iure, autem. Necessitatibus fugit unde id sequi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, illo. Amet sit quos eius nostrum et. Vero fugiat tempore nobis quod similique id distinctio voluptatum soluta aliquam, itaque assumenda vitae!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non numquam veniam nihil voluptatem iure suscipit aut, sunt, qui earum tenetur distinctio illum! Iure, autem. Necessitatibus fugit unde id sequi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, illo. Amet sit quos eius nostrum et. Vero fugiat tempore nobis quod similique id distinctio voluptatum soluta aliquam, itaque assumenda vitae!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non numquam veniam nihil voluptatem iure suscipit aut, sunt, qui earum tenetur distinctio illum! Iure, autem. Necessitatibus fugit unde id sequi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, illo. Amet sit quos eius nostrum et. Vero fugiat tempore nobis quod similique id distinctio voluptatum soluta aliquam, itaque assumenda vitae!</p>
     </main>
 </body>
