--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,14 @@
         table {
             width: 400px;
             border-collapse: collapse;
+            position: relative;
+        }
+
+        caption{
+            font-size: 1,5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
         }
 
         thead, tfoot {
@@ -19,9 +27,23 @@
             color: white;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: rgb(71, 70, 70);
+        }
+
         th, td {
             border: 1px solid black;
             padding: 10px;
+        }
+
+        tbody > tr:nth-child(odd) {
+            background-color: lightgray;
+        }
+
+        tbody > tr:nth-child(even) {
+            background-color: rgba(128, 128, 128, 0.719);
         }
         
         td.num {
@@ -32,10 +54,11 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 90px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -150,7 +173,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total</th>
+                <th scope="row">Total</th>
                 <td class="num"><strong>212 583 750</strongstrong></td>
             </tr>
         </tfoot>
